<resources>
    <string name="abort_registration_warning_message">Warning! This step will cancel the registration and SIMSme will be reset.</string>
    <string name="abort_registration_warning_negative_button">Cancel</string>
    <string name="abort_registration_warning_positve_button">Reset SIMSme</string>
    <string name="abort_registration_warning_title">Cancel registration</string>
    <string name="absence_char_counter">%1$d / %2$d characters</string>
    <string name="absence_message_header">Your personal message</string>
    <string name="absence_notset">Not set</string>
    <string name="absence_set_failed">Setting yourself to absent has failed.</string>
    <string name="absence_text_default">I am absent.</string>
    <string name="absence_text_default2">I am absent until %1$s.</string>
    <string name="account_deleted_from_server_reset_question">Your account was deleted. It is possible that your telephone number was used on another device. Do you wish to reset your account on this device?</string>
    <string name="account_identifier_email">email</string>
    <string name="account_identifier_phonenumber">Phone number</string>
    <string name="account_identifier_simsmeid">SIMSme ID</string>
    <string name="account_registration_identifier_phonenumber">Telephone number</string>
    <string name="action_failed">An error occurred during this action.</string>
    <string name="adjust_picture_rotate">Rotate</string>
    <string name="android_notification_newMessage_message">You have %1$d new messages</string>
    <string name="android_notification_newMessage_title">New SIMSme message</string>
    <string name="android_notification_new_channel_msg_title">New channel message</string>
    <string name="android_notification_new_group_msg__not_accepted_title">Message in unaccepted group</string>
    <string name="android_notification_new_group_msg_title">New group message</string>
    <string name="android_notification_new_private_msg_title">New message</string>
    <string name="android_notification_new_service_msg_title">new servicemessage</string>
    <string name="android_notification_new_single_msg__not_accepted_title">Messages in unaccepted chat</string>
    <string name="android_search_placeholder_channels">Search channels</string>
    <string name="android_search_placeholder_contacts">Search for contact</string>
    <string name="android_serach_placeholder_name_or_phonenumber">Enter name or phone number</string>
    <string name="app_bar_allContacts">All contacts</string>
    <string name="app_bar_load_more_media">Load more media</string>
    <string name="app_bar_load_more_media_windows">Load more</string>
    <string name="app_bar_refresh">Update</string>
    <string name="app_bar_settings_unlock">Unlock settings</string>
    <string name="apply_changes">Apply changes</string>
    <string name="askBrabblerSwitch_labelTitle">Important Note</string>
    <string name="askBrabblerSwitch_labelDescription">As we\'ve recently informed you, SIMSme (now ginlo) has been handed over to Brabbler AG. That\'s why we\'d like to ask for your consent (a) to transfer your contract and (b) to transfer your inventory, traffic, and message data to Brabbler Secure Message and Data Exchange AG (Brabbler AG) so that you can continue to use the messenger without restriction and to the same extent.\nYour consent is voluntary, but if you don\'t give this consent, sending messages will no longer be possible as of %1$s and your account will be deactivated by %2$s. Further information on consent and your rights can be found %3$s.\nThank you!\nYour SIMSme Team</string>
    <string name="askBrabblerSwitch_labelDescription_link">here</string>
    <string name="askBrabblerSwitch_labelDescription_link_url">https://sims.me/datenuebergang/private/en</string>
    <string name="askBrabblerSwitch_buttonAskLater_title">Remind Me Later</string>
    <string name="askBrabblerSwitch_buttonConfirm_title">Yes, I Agree</string>
    <string name="askBrabblerSwitch_reminder1_title">Your Consent is Required</string>
    <string name="askBrabblerSwitch_reminder1_message">You\'d like to continue using SIMSme (now ginlo) in the future? We\'re happy about that! So, don\'t wait and switch to Brabbler AG now.</string>
    <string name="askBrabblerSwitch_reminder1_button_title">OK</string>
    <string name="askBrabblerSwitch_reminder2_title">We Still Need Your Consent</string>
    <string name="askBrabblerSwitch_reminder2_message">Haven\'t had time yet to give your consent? Please take some time to agree to the provider change to Brabbler AG in order to continue using SIMSme (now ginlo).</string>
    <string name="askBrabblerSwitch_reminder2_button_title">OK</string>
    <string name="askBrabblerSwitch_reminder3_title">It\'s Getting Serious…</string>
    <string name="askBrabblerSwitch_reminder3_message">Please agree to the provider change to Brabbler AG. Otherwise, you\'ll no longer be able to send messages as of now. And that would be a real pity. If you no longer want to use ginlo, please create a backup of your data.</string>
    <string name="askBrabblerSwitch_reminder3_button_title">OK</string>
    <string name="askBrabblerSwitch_reminder4_title">Your Account Will be Deactivated</string>
    <string name="askBrabblerSwitch_reminder4_message">If you want to send messages again with ginlo or create a backup of your data, please agree to the transfer of your contract to Brabbler AG now.</string>
    <string name="askBrabblerSwitch_reminder4_button_title">OK</string>
    <string name="settings_brabblerSwitchAction_cell_text">Your Consent is Required</string>
    <string name="settings_brabblerSwitchInfo_cell_text">Your consent to the transfer of your data is required so that you can continue to use the messenger without restriction.</string>
    <string name="brabbler_banner_link">Please agree to the provider change.</string>
    <string name="backendservice_internet_connectionFailed">No Internet connection</string>
    <string name="backup_btn_register_to_drive">Find Backup</string>
    <string name="backup_button_guid_hint">You will need this key to restore your backup later. Please keep it secure. Alternatively, you can use the QR code below.</string>
    <string name="backup_button_guid_title">Your backup key is:</string>
    <string name="backup_button_set_password">Activate backup</string>
    <string name="backup_create_backup_failed_title">Backup failed!</string>
    <string name="backup_edittext_confirm_hint">Enter backup password</string>
    <string name="backup_edittext_hint">Enter backup password</string>
    <string name="backup_password_empty">Please set a password!</string>
    <string name="backup_passwords_not_match">The passwords do not match.</string>
    <string name="backup_restore_btn_register_wo">Re-register without backup</string>
    <string name="backup_restore_confirm_wo_btn">Overwrite existing account</string>
    <string name="backup_restore_confirm_wo_desc">You haven\'t selected a backup and would overwrite the existing account with all data.</string>
    <string name="backup_restore_confirm_wo_title">Would you like to overwrite your existing account?</string>
    <string name="backup_restore_confirm_wo_title_sec">Are you sure you want to continue?</string>
    <string name="backup_restore_copy_progress_text">Importing your backup...</string>
    <string name="backup_restore_desc_drive_connection_failed_register">Now let\'s find your backup to get your existing content in here.</string>
    <string name="backup_restore_desc_enter_password">Your backup has been stored in encrypted form. Please enter your backup password.</string>
    <string name="backup_restore_desc_no_backups_found">This telephone number is already registered with SIMSme, but we could not find a chat backup. A backup lets you transfer your existing chats, contacts and media. Creating a backup.</string>
    <string name="backup_restore_desc_select_backup">Here\'s the list of your backups.</string>
    <string name="backup_restore_download_process_failed">We\'re sorry, but something went wrong while downloading your backup. Please try again.</string>
    <string name="backup_restore_download_progress_text">Looking for your backup...</string>
    <string name="backup_restore_guid_hint">Enter backup key</string>
    <string name="backup_restore_instructions">Enter your backup password and a backup key here.</string>
    <string name="backup_restore_no_backups_found_caption">The backup function is available from SIMSme version 1.7. If you have an older version then this must be updated.</string>
    <string name="backup_restore_no_backups_found_step1">Open your old SIMSme installation</string>
    <string name="backup_restore_no_backups_found_step2">Open the settings</string>
    <string name="backup_restore_no_backups_found_step3">Click on backup</string>
    <string name="backup_restore_no_backups_found_step4">Tap \"Create Backup Now"\.</string>
    <string name="backup_restore_password_hint">Enter password</string>
    <string name="backup_restore_process_failed_contact_sync_failed">Contact synchronisation has failed.</string>
    <string name="backup_restore_process_failed_msg_account_conn_failed">An error occurred when restoring your backups. The reason for this is that the connection to the server was lost, or that the backup is too old.</string>
    <string name="contact_list_invite_contact">Invite friends</string>
    <string name="contacts_fragment_header_last_contacts">Recent contacts</string>
    <string name="contacts_fragment_header_subtitle">in %1$s</string>
    <string name="contacts_fragment_header_title">%1$d contacts</string>
    <string name="contacts_fragment_search_desc">Please search directly by name, email address, department or SIMSme ID</string>
    <string name="contacts_fragment_start_search">Start search</string>
    <string name="next">Continue</string>
    <string name="no_local_contact_button_search">Search for contacts on the SIMSme server</string>
    <string name="no_local_contact_found">No contact found</string>
    <string name="no_local_contact_found_hint">Would you like to search for the contact with SIMSme or send an invitation?</string>
    <string name="password_strength_label">Password strength</string>
    <string name="rate_cancel">No, thank you</string>
    <string name="rate_message">Do you like SIMSme? If so, please rate it. Thanks for your support!</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_remind">Remind me later</string>
    <string name="rate_title">Rate SIMSme</string>
    <string name="settings_aboutSimsme">About SIMSme</string>
    <string name="settings_backup_config_set_password_desc">This password encrypts your backup data.</string>
    <string name="settings_backup_config_set_password_title">Set your backup password</string>
    <string name="settings_companydetails">Site notice</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_license">Licences</string>
    <string name="settings_privacy">Data Privacy Notice SIMSme for Private Customers</string>
    <string name="settings_termsandcondition">Terms of Use</string>
    <string name="settings_support">Get Support</string>
    <string name="settings_support_customerCareSection">Contact Our Customer Care</string>
    <string name="settings_support_customerCare_hint">Got stuck? Our Customer Care is here to help:</string>
    <string name="settings_support_customerCare_email">support@ginlo.net</string>
    <string name="settings_support_logsSection">Send Log File</string>
    <string name="settings_support_logs_hint">Our Customer Care may then ask you to send them your app\'s log file. It contains data about the app, your device, and actions performed – but none of your personal content.</string>
    <string name="settings_support_logs_send">Send Log File Now</string>
</resources>