<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:styledBackground="main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_default" />

        <View style="@style/Divider" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_support_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_support_customerCareSection" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_support_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_support_customerCare_hint"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/support_contact_email_address"
            style="@style/style_support_clickable_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/settings_support_customerCare_email" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_support_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings_support_logsSection" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_support_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_support_logs_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/send_log_file_link"
            style="@style/style_support_clickable_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/action"
            tools:text="@string/settings_support_logs_send" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_support_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_support_logs_hint" />
    </LinearLayout>
</ScrollView>