<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/rate_title"
            android:textColor="@color/app_accent"
            app:styledTextSize="mediumTitleTextSize" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/app_accent"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/rate_message"
        app:styledTextSize="chooserTextSize" />

    <Button
        android:id="@+id/button_neutral"
        style="@style/BorderlessColoredButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onRateLater"
        android:text="@string/rate_remind" />

    <Button
        android:id="@+id/button_negative"
        style="@style/BorderlessColoredButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onRateNever"
        android:text="@string/rate_cancel" />

    <Button
        android:id="@+id/button_positive"
        style="@style/BorderlessColoredButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onRateNow"
        android:text="@string/rate_now" />


</LinearLayout>