<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:styledBackground="main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_backup_config_set_password_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="6sp"
            android:text="@string/settings_backup_config_set_password_title"
            app:styledTextSize="subTitleTextSize"
            app:styledTextColor="mainContrast" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_backup_config_set_password_desc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="5sp"
            android:text="@string/settings_backup_config_set_password_desc"
            app:styledTextSize="baseTextSize"
            app:styledTextColor="mainContrast80" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/backup_set_password_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:drawableRight="@drawable/password_strength_grey"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="3sp"
            android:text="@string/password_strength_label"
            app:styledTextSize="commentTextSize" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/backup_set_password_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:hint="@string/backup_restore_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backup_set_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onFragmentViewClick"
        android:text="@string/next"
        app:styledBackground="action"
        app:styledButtonType="normal"
        app:styledTextColor="actionContrast" />

</LinearLayout>